# Youtube-Sentiment-MLOps

./: .flake8  .pre-commit-config.yaml  pyproject.toml  pytest.ini  setup.py
notebooks/: 1_Preprocessing_&_EDA.ipynb  2_Experiment_1_baseline_model.ipynb
scripts/: activate.sh  dev.sh
tests/: __init__.py  test_data_preprocessing.py
