[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-sentiment-mlops"
version = "0.1.0"
description = "MLOps project for YouTube sentiment analysis"
requires-python = ">=3.11"
authors = [
    {name = "Hadi"}
]
dependencies = [
    "boto3==1.35.36",
    "Flask==3.0.3",
    "Flask_Cors==5.0.0",
    "joblib==1.4.2",
    "lightgbm==4.5.0",
    "matplotlib==3.9.2",
    "mlflow==2.17.0",
    "dvc==3.53.0",
    "dvc[s3]",
    "nltk==3.9.1",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "wordcloud==1.9.3",
    "seaborn==0.13.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0"
] 